--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="container mx-auto px-6 py-4">
             <div class="flex items-center justify-between">
                 <div class="flex items-center">
-                    <div class="w-10 h-10 rounded-full bg-blue-500 flex items-center justify-center text-white font-bold text-xl">MilesONerd</div>
+                    <div class="w-10 h-10 rounded-full bg-blue-500 flex items-center justify-center text-white font-bold text-xl"><img src=" https://milesonerd.github.io/assets/image/Logo/Phoenix.jpg" alt="Enzo Fuke" width="50" height="50" loading="lazy"></div>
                     <span class="ml-3 text-xl font-bold text-white">Enzo Fuke</span>
                 </div>
                 <nav class="hidden md:flex space-x-8">
