--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <a href="/contact" class="text-gray-300 hover:text-blue-400 transition">Contact</a>
                 </nav>
                 <div class="flex items-center space-x-4">
-                    <a href="https://milesonerd.github.io" class="px-4 py-2 bg-blue-600 text-white font-medium rounded-lg hover:bg-blue-700 transition shadow-md pulse">Other Website version</a>
+                    <a href="/old" class="px-4 py-2 bg-blue-600 text-white font-medium rounded-lg hover:bg-blue-700 transition shadow-md pulse">Other Website version</a>
                     <button class="md:hidden text-gray-300 focus:outline-none">
                         <i class="fas fa-bars text-2xl"></i>
                     </button>
@@ -100,7 +100,7 @@
                 <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold text-white leading-tight mb-6 glow">If it hasn't worked out yet, it's because it's not over yet</h1>
                 <p class="text-xl text-blue-100 opacity-90 mb-8">I am a Data and Machine Learning Professional and Full Stack developer, who programs in Python, SQL, Go, C#, R, Assembly, Rust, Java, F#, Solidity, Ruby, Kotlin, TypeScript, C++, C, JavaScript, LUA and VBA (Visual Basic for Applications). And the NoSQL database. In addition to using the following markup languages ​​Markdown, HTML, XML and YAML. I use the styling language CSS. In addition to using shell languages Shell Script, GNU Bash and PowerShell. And the Json data format. I am a big enthusiast of artificial intelligence (AI) and cibersecurity, where I always follow information. Always learn new things. In favor of decentralizing the internet (Web3).</p>
                 <div class="flex flex-col sm:flex-row space-y-4 sm:space-y-0 sm:space-x-4">
-                    <a href="https://github.com/MilesONerd?tab=repositories" class="px-8 py-4 bg-white text-blue-900 font-bold rounded-lg hover:bg-gray-100 transition shadow-lg text-center">Publica Repositories </a>
+                    <a href="https://github.com/MilesONerd?tab=repositories" class="px-8 py-4 bg-white text-blue-900 font-bold rounded-lg hover:bg-gray-100 transition shadow-lg text-center">Public Repositories </a>
                     <a href="https://orcid.org/0009-0000-1734-5150" class="px-8 py-4 border-2 border-white text-white font-bold rounded-lg hover:bg-white hover:bg-opacity-10 transition text-center">ORCID</a>
                 </div>
                 <div class="mt-8 flex items-center">
@@ -123,8 +123,8 @@
                     <div class="terminal-dot green"></div>
                     <div class="mt-10">
                         <div class="typewriter text-lg mb-4">> Hello World...</div>
-                        <div class="typewriter text-lg mb-4 delay-1000">> If it hasn't worked out yet,...</div>
-                        <div class="typewriter text-lg mb-4 delay-2000">> it's because it's not over yet.</div>
+                        <div class="typewriter text-lg mb-4 delay-1000">> Downloading resources...</div>
+                        <div class="typewriter text-lg mb-4 delay-2000">> Running.</div>
                         <div class="text-xl font-bold text-green-400 mt-6">Welcome to my new website.</div>
                     </div>
                 </div>
@@ -138,29 +138,29 @@
             <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-5 gap-8 mb-12">
                 <div class="col-span-2">
                     <div class="flex items-center mb-4">
-                        <div class="w-10 h-10 rounded-full bg-blue-500 flex items-center justify-center text-white font-bold text-xl">E</div>
+                        <div class="w-10 h-10 rounded-full bg-blue-500 flex items-center justify-center text-white font-bold text-xl"><img src=" https://milesonerd.github.io/assets/image/Logo/Phoenix.jpg" alt="Enzo Fuke" width="50" height="50" loading="lazy"></div>
                         <span class="ml-3 text-xl font-bold text-white">Enzo Fuke</span>
                     </div>
                     <p class="text-gray-400 mb-4">If it hasn't worked out yet, it's because it's not over yet</p>
                     <div class="flex space-x-4">
-                        <a href="https://bitbucket.org/milesonerd" class="text-gray-400 hover:text-blue-400"><img src="https://cdn.simpleicons.org/bitbucket/0052CC" alt="Bitbucket logo" width="32" height="32"></a>
-                        <a href="https://codeberg.org/MilesONerd" class="text-gray-400 hover:text-blue-400"><img src="https://cdn.simpleicons.org/codeberg/2185D0" alt="Codeberg logo" width="32" height="32"></a>
-                        <a href="https://codepen.io/MilesONerd" class="text-gray-400 hover:text-blue-400"><img src="https://cdn.simpleicons.org/codepen/0EBEFF" alt="CodePen logo" width="32" height="32" loading="lazy"></a>
-                        <a href="https://gitea.com/MilesONerd" class="text-gray-400 hover:text-blue-400"><img src="https://cdn.simpleicons.org/gitea/609926" alt="Gitea logo" width="32" height="32" loading="lazy"></a>
-                        <a href="https://github.com/MilesONerd" class="text-gray-400 hover:text-blue-400"><img src="https://cdn.simpleicons.org/github/181717" alt="GitHub logo" width="32" height="32" loading="lazy"></a>
-                        <a href="https://gitlab.com/MilesONerd" class="text-gray-400 hover:text-blue-400"><img src="https://cdn.simpleicons.org/gitlab/fc6d27" alt="GitLab logo" width="32" height="32" loading="lazy"></a>
-                        <a href="https://g.dev/MilesONerd" class="text-gray-400 hover:text-blue-400"><img src="https://cdn.simpleicons.org/google/4285F4" alt="Google logo" width="32" height="32" loading="lazy"></a>
-                        <a href="https://gravatar.com/milesonerd" class="text-gray-400 hover:text-blue-400"><img src="https://cdn.simpleicons.org/gravatar/2768A8" alt="Gravatar logo" width="32" height="32" loading="lazy"></a>
-                        <a href="https://huggingface.co/milesonerd" class="text-gray-400 hover:text-blue-400"><img src="https://cdn.simpleicons.org/huggingface/ffcc00" alt="Hugging Face" width="32" height="32" loading="lazy" /></a>
-                        <a href="https://instagram.com/milesonerd" class="text-gray-400 hover:text-blue-400"><img src="https://cdn.simpleicons.org/instagram/e1306c" alt="Instagram logo" width="32" height="32" loading="lazy"></a>
-                        <a href="https://kaggle.com/milesonerd" class="text-gray-400 hover:text-blue-400"><img src="https://cdn.simpleicons.org/kaggle/20BEFF" alt="Kaggle logo" width="32" height="32" loading="lazy"></a>
-                        <a href="https://openprofile.dev/profile/milesonerd" class="text-gray-400 hover:text-blue-400"><img src="https://cdn.simpleicons.org/linuxfoundation/003B49" alt="Linux Foundation logo" width="32" height="32" loading="lazy"></a>
-                        <a href="https://fosstodon.org/@MilesONerd" class="text-gray-400 hover:text-blue-400"><img src="https://cdn.simpleicons.org/mastodon/6364FF" alt="Mastodon logo" width="32" height="32" loading="lazy"></a>
-                        <a href="nostr:npub146dsxth0gjyc9u26pl0uw39tzshylqk28ndz7fexnm3epe5udqms203cle" class="text-gray-400 hover:text-blue-400">N</a>
-                        <a href="https://www.postman.com/milesonerd" class="text-gray-400 hover:text-blue-400"><img src="https://cdn.simpleicons.org/postman/EF5B25" alt="Postman logo" width="32" height="32" loading="lazy"></a>
-                        <a href="https://stackoverflow.com/users/26412577" class="text-gray-400 hover:text-blue-400"></a>
-                        <a href="https://threads.net/milesonerd" class="text-gray-400 hover:text-blue-400"><img src="https://cdn.simpleicons.org/threads/FFFFFF" alt="Threads logo" width="32" height="32" loading="lazy"></a>
-                        <a href="https://wakatime.com/@MilesONerd" class="text-gray-400 hover:text-blue-400"><img src="https://cdn.simpleicons.org/wakatime/f47f1e" alt="WakaTime logo" width="32" height="32" loading="lazy"></a>
+                        <a href="https://bitbucket.org/milesonerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/bitbucket/0052CC" alt="Bitbucket logo" width="32" height="32"></a>
+                        <a href="https://codeberg.org/MilesONerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/codeberg/2185D0" alt="Codeberg logo" width="32" height="32"></a>
+                        <a href="https://codepen.io/MilesONerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/codepen/0EBEFF" alt="CodePen logo" width="32" height="32" loading="lazy"></a>
+                        <a href="https://gitea.com/MilesONerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/gitea/609926" alt="Gitea logo" width="32" height="32" loading="lazy"></a>
+                        <a href="https://github.com/MilesONerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/github/181717" alt="GitHub logo" width="32" height="32" loading="lazy"></a>
+                        <a href="https://gitlab.com/MilesONerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/gitlab/fc6d27" alt="GitLab logo" width="32" height="32" loading="lazy"></a>
+                        <a href="https://g.dev/MilesONerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/google/4285F4" alt="Google logo" width="32" height="32" loading="lazy"></a>
+                        <a href="https://gravatar.com/milesonerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/gravatar/2768A8" alt="Gravatar logo" width="32" height="32" loading="lazy"></a>
+                        <a href="https://huggingface.co/milesonerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/huggingface/ffcc00" alt="Hugging Face" width="32" height="32" loading="lazy" /></a>
+                        <a href="https://instagram.com/milesonerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/instagram/e1306c" alt="Instagram logo" width="32" height="32" loading="lazy"></a>
+                        <a href="https://kaggle.com/milesonerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/kaggle/20BEFF" alt="Kaggle logo" width="32" height="32" loading="lazy"></a>
+                        <a href="https://openprofile.dev/profile/milesonerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/linuxfoundation/003B49" alt="Linux Foundation logo" width="32" height="32" loading="lazy"></a>
+                        <a href="https://fosstodon.org/@MilesONerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/mastodon/6364FF" alt="Mastodon logo" width="32" height="32" loading="lazy"></a>
+                        <a href="https://www.postman.com/milesonerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/postman/EF5B25" alt="Postman logo" width="32" height="32" loading="lazy"></a>
+                        <a href="https://stackoverflow.com/users/26412577" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/stackoverflow/f47f24" alt="Stack Overflow logo" width="32" height="32" loading="lazy"></a>
+                        <a href="https://threads.net/milesonerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/threads/FFFFFF" alt="Threads logo" width="32" height="32" loading="lazy"></a>
+                        <a href="https://wakatime.com/@MilesONerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/wakatime/f47f1e" alt="WakaTime logo" width="32" height="32" loading="lazy"></a>
+                        <p class="text-white hover:text-blue-400">Nostr: npub146dsxth0gjyc9u26pl0uw39tzshylqk28ndz7fexnm3epe5udqms203cle</p>
                     </div>
                 </div>
                 <div>
@@ -181,9 +181,9 @@
                     </ul>
                 </div>
                 <div id="contact">
-                    <h3 class="text-lg font-semibold text-white mb-4">Contato</h3>
+                    <h3 class="text-lg font-semibold text-white mb-4">Contact</h3>
                     <ul class="space-y-2">
-                        <li class="text-gray-400"><i class="fas fa-envelope mr-2"></i> <a href="/contact" class="text-gray-400 hover:text-blue-400 transition"> Contact Page</li>
+                        <li class="text-gray-400"><i class="fas fa-envelope mr-2"></i> <a href="/contact" class="text-gray-400 hover:text-blue-400 transition"> Contact Page</a></li>
                         <li class="text-gray-400"><i class="fas fa-map-marker-alt mr-2"></i> Internet</li>
                     </ul>
                 </div>
@@ -192,17 +192,18 @@
                 <p class="text-gray-500 text-sm mb-4 md:mb-0">This website is not affiliated with any of the companies mentioned. All product names, logos and brands are the property of their respective owners.</p>
                 <p class="text-gray-500 text-sm mb-4 md:mb-0">Copyright © 2024-2025 Enzo Fuke. All Rights Reserved.</p>
                 <div class="flex space-x-6">
-                    <a href="terms/service" class="text-gray-500 hover:text-gray-400 text-sm">Terms of Service</a>
-                    <a href="policies/privacy" class="text-gray-500 hover:text-gray-400 text-sm">Privacy</a>
-                    <a href="policies/cookies" class="text-gray-500 hover:text-gray-400 text-sm">Cookies</a>
+                    <a href="/terms/service" class="text-gray-500 hover:text-gray-400 text-sm">Terms of Service</a>
+                    <a href="/policies/privacy" class="text-gray-500 hover:text-gray-400 text-sm">Privacy</a>
+                    <a href="/policies/cookies" class="text-gray-500 hover:text-gray-400 text-sm">Cookies</a>
+                    <a href="/accessibility" class="text-gray-500 hover:text-gray-400 text-sm">Accessibility</a>
                 </div>
             </div>
         </div>
     </footer>
 
     <script>
-      <script src="https://milesonerd.github.io/scripts/functions.js"></script>
-      <script src="https://milesonerd.github.io/scripts/serviceworker.js"></script>
+      <script src="/scripts/functions.js"></script>
+      <script src="/scripts/serviceworker.js"></script>
     </script>
 </body>
 </html>
