--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="container mx-auto px-6 py-4">
             <div class="flex items-center justify-between">
                 <div class="flex items-center">
-                    <div class="w-10 h-10 rounded-full bg-blue-500 flex items-center justify-center text-white font-bold text-xl"><img src=" https://milesonerd.github.io/assets/image/Logo/Phoenix.jpg" alt="Enzo Fuke" width="50" height="50" loading="lazy"></div>
+                    <div class="w-10 h-10 rounded-full bg-blue-500 flex items-center justify-center text-white font-bold text-xl"><img src=" /assets/image/Logo/Phoenix.jpg" alt="Enzo Fuke" width="50" height="50" loading="lazy"></div>
                     <span class="ml-3 text-xl font-bold text-white">Enzo Fuke</span>
                 </div>
                 <nav class="hidden md:flex space-x-8">
@@ -105,7 +105,7 @@
                 </div>
                 <div class="mt-8 flex items-center">
                     <div class="flex -space-x-2">
-                        <img src="https://milesonerd.github.io/image/Phoenix.jpg" class="w-10 h-10 rounded-full border-2 border-blue-300">
+                        <img src="/assets/image/logo/Phoenix.jpg" class="w-10 h-10 rounded-full border-2 border-blue-300">
                     </div>
                     <div class="ml-4 text-blue-100">
                         <p class="font-medium">If it hasn't worked out yet, it's because it's not over yet</p>
@@ -138,7 +138,7 @@
             <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-5 gap-8 mb-12">
                 <div class="col-span-2">
                     <div class="flex items-center mb-4">
-                        <div class="w-10 h-10 rounded-full bg-blue-500 flex items-center justify-center text-white font-bold text-xl"><img src=" https://milesonerd.github.io/assets/image/Logo/Phoenix.jpg" alt="Enzo Fuke" width="50" height="50" loading="lazy"></div>
+                        <div class="w-10 h-10 rounded-full bg-blue-500 flex items-center justify-center text-white font-bold text-xl"><img src=" /assets/image/Logo/Phoenix.jpg" alt="Enzo Fuke" width="50" height="50" loading="lazy"></div>
                         <span class="ml-3 text-xl font-bold text-white">Enzo Fuke</span>
                     </div>
                     <p class="text-gray-400 mb-4">If it hasn't worked out yet, it's because it's not over yet</p>
@@ -202,8 +202,8 @@
     </footer>
 
     <script>
-      <script src="/scripts/functions.js"></script>
-      <script src="/scripts/serviceworker.js"></script>
+      <script src="/assets/scripts/functions.js"></script>
+      <script src="/assets/scripts/serviceworker.js"></script>
     </script>
 </body>
 </html>
