Adding correct file paths

--- a/index.html
+++ b/index.html
@@ -6,6 +6,34 @@
     <title>Home | Enzo Fuke | If it hasn't worked out yet, it's because it's not over yet</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    
+    <meta property="og:url" content="https://milesonerd.netlify.app" />
+	<meta property="og:type" content="website" />
+	<meta property="og:site_name" content="Enzo Fuke" />
+	<meta property="og:title" content="Enzo Fuke | If it hasn't worked out yet, it's because it's not over yet" />
+	<meta property="og:description" content="If it hasn't worked out yet, it's because it's not over yet" />
+	<meta property="og:image" content="https://milesonerd.github.io/assets/image/Logo/Phoenix.jpg" />  <meta property="og:image:width" content="1200" />
+	<meta property="og:image:height" content="1200" />
+	<meta property="og:locale" content="en_US" />
+
+	<meta name="twitter:card" content="summary_large_image" />
+	<meta name="twitter:domain" content="milesonerd.netlify.app" />
+	<meta name="twitter:url" content="https://milesonerd.netlify.app" />
+	<meta name="twitter:title" content="Enzo Fuke | If it hasn't worked out yet, it's because it's not over yet" />
+	<meta name="twitter:description" content="If it hasn't worked out yet, it's because it's not over yet" />
+	<meta name="twitter:image" content="https://milesonerd.github.io/assets/image/Logo/Phoenix.jpg" />  <meta name="twitter:image:width" content="1200" />
+	<meta name="twitter:image:height" content="1200" />
+
+	<link rel="icon" href="https://milesonerd.github.io/assets/image/favicon/favicon.ico" type="image/x-icon">
+
+    <link rel="icon" type="image/png" sizes="16x16" href="https://milesonerd.github.io/assets/image/favicon/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://milesonerd.github.io/assets/image/favicon/favicon-32x32.png">   
+
+    <link rel="icon" type="image/png" sizes="192x192" href="https://milesonerd.github.io/assets/image/favicon/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="https://milesonerd.github.io/assets/image/favicon/android-chrome-512x512.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://milesonerd.github.io/assets/image/favicon/apple-touch-icon.png">
+    <link rel="manifest" href="https://milesonerd.github.io/assets/image/favicon/site.webmanifest">
+
     <style>
         .hero-gradient {
             background: linear-gradient(135deg, #000428 0%, #004e92 100%);
@@ -74,7 +102,7 @@
         <div class="container mx-auto px-6 py-4">
             <div class="flex items-center justify-between">
                 <div class="flex items-center">
-                    <div class="w-10 h-10 rounded-full bg-blue-500 flex items-center justify-center text-white font-bold text-xl"><img src=" /assets/image/Logo/Phoenix.jpg" alt="Enzo Fuke" width="50" height="50" loading="lazy"></div>
+                    <div class="w-10 h-10 rounded-full bg-blue-500 flex items-center justify-center text-white font-bold text-xl"><img src=" https://milesonerd.github.io/assets/image/Logo/Phoenix.jpg" alt="Enzo Fuke" width="50" height="50" loading="lazy"></div>
                     <span class="ml-3 text-xl font-bold text-white">Enzo Fuke</span>
                 </div>
                 <nav class="hidden md:flex space-x-8">
@@ -83,7 +111,7 @@
                     <a href="/contact" class="text-gray-300 hover:text-blue-400 transition">Contact</a>
                 </nav>
                 <div class="flex items-center space-x-4">
-                    <a href="/old" class="px-4 py-2 bg-blue-600 text-white font-medium rounded-lg hover:bg-blue-700 transition shadow-md pulse">Other Website version</a>
+                    <a href="milesonerd.github.io/" class="px-4 py-2 bg-blue-600 text-white font-medium rounded-lg hover:bg-blue-700 transition shadow-md pulse">Other Website version</a>
                     <button class="md:hidden text-gray-300 focus:outline-none">
                         <i class="fas fa-bars text-2xl"></i>
                     </button>
@@ -105,7 +133,7 @@
                 </div>
                 <div class="mt-8 flex items-center">
                     <div class="flex -space-x-2">
-                        <img src="/assets/image/logo/Phoenix.jpg" class="w-10 h-10 rounded-full border-2 border-blue-300">
+                        <img src="https://milesonerd.github.io/assets/image/logo/Phoenix.jpg" class="w-10 h-10 rounded-full border-2 border-blue-300">
                     </div>
                     <div class="ml-4 text-blue-100">
                         <p class="font-medium">If it hasn't worked out yet, it's because it's not over yet</p>
@@ -138,7 +166,7 @@
             <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-5 gap-8 mb-12">
                 <div class="col-span-2">
                     <div class="flex items-center mb-4">
-                        <div class="w-10 h-10 rounded-full bg-blue-500 flex items-center justify-center text-white font-bold text-xl"><img src=" /assets/image/Logo/Phoenix.jpg" alt="Enzo Fuke" width="50" height="50" loading="lazy"></div>
+                        <div class="w-10 h-10 rounded-full bg-blue-500 flex items-center justify-center text-white font-bold text-xl"><img src=" https://milesonerd.github.io/assets/image/Logo/Phoenix.jpg" alt="Enzo Fuke" width="50" height="50" loading="lazy"></div>
                         <span class="ml-3 text-xl font-bold text-white">Enzo Fuke</span>
                     </div>
                     <p class="text-gray-400 mb-4">If it hasn't worked out yet, it's because it's not over yet</p>
@@ -160,7 +188,6 @@
                         <a href="https://stackoverflow.com/users/26412577" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/stackoverflow/f47f24" alt="Stack Overflow logo" width="32" height="32" loading="lazy"></a>
                         <a href="https://threads.net/milesonerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/threads/FFFFFF" alt="Threads logo" width="32" height="32" loading="lazy"></a>
                         <a href="https://wakatime.com/@MilesONerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/wakatime/f47f1e" alt="WakaTime logo" width="32" height="32" loading="lazy"></a>
-                        <p class="text-white hover:text-blue-400">Nostr: npub146dsxth0gjyc9u26pl0uw39tzshylqk28ndz7fexnm3epe5udqms203cle</p>
                     </div>
                 </div>
                 <div>
@@ -201,9 +228,7 @@
         </div>
     </footer>
 
-    <script>
-      <script src="/assets/scripts/functions.js"></script>
-      <script src="/assets/scripts/serviceworker.js"></script>
-    </script>
+    <script src="https://milesonerd.github.io/assets/scripts/functions.js"></script>
+    <script src="https://milesonerd.github.io/assets/scripts/serviceworker.js"></script>
 </body>
 </html>
