Adding correct file paths

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 </div>
                 <div class="mt-8 flex items-center">
                     <div class="flex -space-x-2">
-                        <img src="https://milesonerd.github.io/assets/image/logo/Phoenix.jpg" class="w-10 h-10 rounded-full border-2 border-blue-300">
+                        <img src=" https://milesonerd.github.io/assets/image/Logo/Phoenix.jpg" alt="Enzo Fuke" width="50" height="50" loading="lazy" class="w-10 h-10 rounded-full border-2 border-blue-300">
                     </div>
                     <div class="ml-4 text-blue-100">
                         <p class="font-medium">If it hasn't worked out yet, it's because it's not over yet</p>
