--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 </div>
                 <div class="mt-8 flex items-center">
                     <div class="flex -space-x-2">
-                        <img src=" https://milesonerd.github.io/assets/image/Logo/Phoenix.jpg" alt="Enzo Fuke" width="50" height="50" loading="lazy" class="w-10 h-10 rounded-full border-2 border-blue-300">
+                        <img src=" https://milesonerd.github.io/assets/image/Logo/Phoenix.jpg" alt="Enzo Fuke" loading="lazy" class="w-10 h-10 rounded-full border-2 border-blue-300">
                     </div>
                     <div class="ml-4 text-blue-100">
                         <p class="font-medium">If it hasn't worked out yet, it's because it's not over yet</p>
@@ -216,8 +216,8 @@
                 </div>
             </div>
             <div class="pt-8 border-t border-gray-800 flex flex-col md:flex-row justify-between items-center">
-                <p class="text-gray-500 text-sm mb-4 md:mb-0">This website is not affiliated with any of the companies mentioned. All product names, logos and brands are the property of their respective owners.</p>
                 <p class="text-gray-500 text-sm mb-4 md:mb-0">Copyright © 2024-2025 Enzo Fuke. All Rights Reserved.</p>
+                <p class="text-gray-500 text-sm mb-4 md:mb-0">This website is not affiliated with any of the companies mentioned. All product names, logos and brands are the property of their respective owners.</p>
                 <div class="flex space-x-6">
                     <a href="/terms/service" class="text-gray-500 hover:text-gray-400 text-sm">Terms of Service</a>
                     <a href="/policies/privacy" class="text-gray-500 hover:text-gray-400 text-sm">Privacy</a>
