--- a/index.html
+++ b/index.html
@@ -94,6 +94,17 @@
             from, to { border-color: transparent }
             50% { border-color: #0f0 }
         }
+        .social-icon {
+            width: 3rem; 
+            height: 3rem;
+        }
+
+        @media (max-width: 640px) { 
+            .social-icon {
+                width: 4rem; 
+                height: 4rem;
+            }
+        }
     </style>
 </head>
 <body class="font-sans antialiased text-gray-100 bg-gray-900">
@@ -171,23 +182,23 @@
                     </div>
                     <p class="text-gray-400 mb-4">If it hasn't worked out yet, it's because it's not over yet</p>
                     <div class="flex space-x-4">
-                        <a href="https://bitbucket.org/milesonerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/bitbucket/0052CC" alt="Bitbucket logo" class="w-10 h-10 sm:w-12 sm:h-12 md:w-14 md:h-14" loading="lazy"></a>
-                        <a href="https://codeberg.org/MilesONerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/codeberg/2185D0" alt="Codeberg logo" class="w-10 h-10 sm:w-12 sm:h-12 md:w-14 md:h-14" loading="lazy"></a>
-                        <a href="https://codepen.io/MilesONerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/codepen/0EBEFF" alt="CodePen logo" class="w-10 h-10 sm:w-12 sm:h-12 md:w-14 md:h-14" loading="lazy"></a>
-                        <a href="https://gitea.com/MilesONerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/gitea/609926" alt="Gitea logo" class="w-10 h-10 sm:w-12 sm:h-12 md:w-14 md:h-14" loading="lazy"></a>
-                        <a href="https://github.com/MilesONerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/github/181717" alt="GitHub logo" class="w-10 h-10 sm:w-12 sm:h-12 md:w-14 md:h-14" loading="lazy"></a>
-                        <a href="https://gitlab.com/MilesONerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/gitlab/fc6d27" alt="GitLab logo" class="w-10 h-10 sm:w-12 sm:h-12 md:w-14 md:h-14" loading="lazy"></a>
-                        <a href="https://g.dev/MilesONerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/google/4285F4" alt="Google logo" class="w-10 h-10 sm:w-12 sm:h-12 md:w-14 md:h-14" loading="lazy"></a>
-                        <a href="https://gravatar.com/milesonerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/gravatar/2768A8" alt="Gravatar logo" class="w-10 h-10 sm:w-12 sm:h-12 md:w-14 md:h-14" loading="lazy"></a>
-                        <a href="https://huggingface.co/milesonerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/huggingface/ffcc00" alt="Hugging Face" class="w-10 h-10 sm:w-12 sm:h-12 md:w-14 md:h-14" loading="lazy" /></a>
-                        <a href="https://instagram.com/milesonerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/instagram/e1306c" alt="Instagram logo" class="w-10 h-10 sm:w-12 sm:h-12 md:w-14 md:h-14" loading="lazy"></a>
-                        <a href="https://kaggle.com/milesonerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/kaggle/20BEFF" alt="Kaggle logo" class="w-10 h-10 sm:w-12 sm:h-12 md:w-14 md:h-14" loading="lazy"></a>
-                        <a href="https://openprofile.dev/profile/milesonerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/linuxfoundation/003B49" alt="Linux Foundation logo" class="w-10 h-10 sm:w-12 sm:h-12 md:w-14 md:h-14" loading="lazy"></a>
-                        <a href="https://fosstodon.org/@MilesONerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/mastodon/6364FF" alt="Mastodon logo" class="w-10 h-10 sm:w-12 sm:h-12 md:w-14 md:h-14" loading="lazy"></a>
-                        <a href="https://www.postman.com/milesonerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/postman/EF5B25" alt="Postman logo" class="w-10 h-10 sm:w-12 sm:h-12 md:w-14 md:h-14" loading="lazy"></a>
-                        <a href="https://stackoverflow.com/users/26412577" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/stackoverflow/f47f24" alt="Stack Overflow logo" class="w-10 h-10 sm:w-12 sm:h-12 md:w-14 md:h-14" loading="lazy"></a>
-                        <a href="https://threads.net/milesonerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/threads/FFFFFF" alt="Threads logo" class="w-10 h-10 sm:w-12 sm:h-12 md:w-14 md:h-14" loading="lazy"></a>
-                        <a href="https://wakatime.com/@MilesONerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/wakatime/f47f1e" alt="WakaTime logo" class="w-10 h-10 sm:w-12 sm:h-12 md:w-14 md:h-14" loading="lazy"></a>
+                        <a href="https://bitbucket.org/milesonerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/bitbucket/0052CC" alt="Bitbucket logo" class="social-icon" loading="lazy"></a>
+                        <a href="https://codeberg.org/MilesONerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/codeberg/2185D0" alt="Codeberg logo" class="social-icon" loading="lazy"></a>
+                        <a href="https://codepen.io/MilesONerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/codepen/0EBEFF" alt="CodePen logo" class="social-icon" loading="lazy"></a>
+                        <a href="https://gitea.com/MilesONerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/gitea/609926" alt="Gitea logo" class="social-icon" loading="lazy"></a>
+                        <a href="https://github.com/MilesONerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/github/181717" alt="GitHub logo" class="social-icon" loading="lazy"></a>
+                        <a href="https://gitlab.com/MilesONerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/gitlab/fc6d27" alt="GitLab logo" class="social-icon" loading="lazy"></a>
+                        <a href="https://g.dev/MilesONerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/google/4285F4" alt="Google logo" class="social-icon" loading="lazy"></a>
+                        <a href="https://gravatar.com/milesonerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/gravatar/2768A8" alt="Gravatar logo" class="social-icon" loading="lazy"></a>
+                        <a href="https://huggingface.co/milesonerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/huggingface/ffcc00" alt="Hugging Face" class="social-icon" loading="lazy" /></a>
+                        <a href="https://instagram.com/milesonerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/instagram/e1306c" alt="Instagram logo" class="social-icon" loading="lazy"></a>
+                        <a href="https://kaggle.com/milesonerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/kaggle/20BEFF" alt="Kaggle logo" class="social-icon" loading="lazy"></a>
+                        <a href="https://openprofile.dev/profile/milesonerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/linuxfoundation/003B49" alt="Linux Foundation logo" class="social-icon" loading="lazy"></a>
+                        <a href="https://fosstodon.org/@MilesONerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/mastodon/6364FF" alt="Mastodon logo" class="social-icon" loading="lazy"></a>
+                        <a href="https://www.postman.com/milesonerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/postman/EF5B25" alt="Postman logo" class="social-icon" loading="lazy"></a>
+                        <a href="https://stackoverflow.com/users/26412577" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/stackoverflow/f47f24" alt="Stack Overflow logo" class="social-icon" loading="lazy"></a>
+                        <a href="https://threads.net/milesonerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/threads/FFFFFF" alt="Threads logo" class="social-icon" loading="lazy"></a>
+                        <a href="https://wakatime.com/@MilesONerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/wakatime/f47f1e" alt="WakaTime logo" class="social-icon" loading="lazy"></a>
                     </div>
                 </div>
                 <div>
