Fixing the size of social media logos

--- a/index.html
+++ b/index.html
@@ -95,14 +95,14 @@
             50% { border-color: #0f0 }
         }
         .social-icon {
-            width: 3rem; 
-            height: 3rem;
+            width: 3rem !important; 
+            height: 3rem !important;
         }
 
         @media (max-width: 640px) { 
             .social-icon {
-                width: 4rem; 
-                height: 4rem;
+                width: 4rem !important; 
+                height: 4rem !important;
             }
         }
     </style>
