--- a/index.html
+++ b/index.html
@@ -95,14 +95,18 @@
             50% { border-color: #0f0 }
         }
         .social-icon {
-            width: 3rem !important; 
-            height: 3rem !important;
+            width: 8vw !important; 
+            height: 8vw !important;
+            max-width: 60px !important;
+            max-height: 60px !important;
         }
 
         @media (max-width: 640px) { 
             .social-icon {
-                width: 4rem !important; 
-                height: 4rem !important;
+                width: 12vw !important; 
+                height: 12vw !important;
+                max-width: 40px !important;
+                max-height: 40px !important;
             }
         }
     </style>
