Fixing the size of social media logos

--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@
             height: 8vw !important;
             max-width: 60px !important;
             max-height: 60px !important;
+            min-width: 30px !important;
+            min-height: 30px !important;
         }
 
         @media (max-width: 640px) { 
@@ -107,6 +109,8 @@
                 height: 12vw !important;
                 max-width: 40px !important;
                 max-height: 40px !important;
+                min-width: 25px !important;
+                min-height: 25px !important;
             }
         }
     </style>
