--- a/index.html
+++ b/index.html
@@ -97,10 +97,11 @@
         .social-icon {
             width: 8vw !important; 
             height: 8vw !important;
-            max-width: 60px !important;
-            max-height: 60px !important;
+            max-width: 50px !important;
+            max-height: 50px !important;
             min-width: 20px !important;
             min-height: 20px !important;
+            object-fit: contain !important;
         }
 
         @media (max-width: 640px) { 
@@ -111,6 +112,29 @@
                 max-height: 40px !important;
                 min-width: 15px !important;
                 min-height: 15px !important;
+                object-fit: contain !important;
+            }
+        }
+        @media (max-width: 480px) {
+            .social-icon {
+                width: 15vw;  
+                height: 15vw;
+                max-width: 35px;  
+                max-height: 35px;
+                min-width: 20px;  
+                min-height: 20px;
+                object-fit: contain;  
+            }
+        }
+        @media (max-width: 320px) {
+            .social-icon {
+                width: 20vw;  
+                height: 20vw;
+                max-width: 30px; 
+                max-height: 30px;
+                min-width: 15px;  
+                min-height: 15px;
+                object-fit: contain;  
             }
         }
     </style>
