Fixing the size of social media logos

--- a/index.html
+++ b/index.html
@@ -117,24 +117,24 @@
         }
         @media (max-width: 480px) {
             .social-icon {
-                width: 15vw;  
-                height: 15vw;
-                max-width: 35px;  
-                max-height: 35px;
-                min-width: 20px;  
-                min-height: 20px;
-                object-fit: contain;  
+                width: 15vw !important;  
+                height: 15vw !important;
+                max-width: 35px !important;  
+                max-height: 35px !important;
+                min-width: 20px !important;  
+                min-height: 20px !important;
+                object-fit: contain !important;  
             }
         }
         @media (max-width: 320px) {
             .social-icon {
-                width: 20vw;  
-                height: 20vw;
-                max-width: 30px; 
-                max-height: 30px;
-                min-width: 15px;  
-                min-height: 15px;
-                object-fit: contain;  
+                width: 20vw !important;  
+                height: 20vw !important;
+                max-width: 30px !important; 
+                max-height: 30px !important;
+                min-width: 15px !important;  
+                min-height: 15px !important;
+                object-fit: contain !important;  
             }
         }
     </style>
