--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en-US">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -170,6 +170,5 @@
     </footer>
 
     <script src="https://milesonerd.github.io/assets/scripts/functions.js"></script>
-    <script src="https://milesonerd.github.io/assets/scripts/serviceworker.js"></script>
 </body>
 </html>
