--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <a href="/contact" class="text-gray-300 hover:text-blue-400 transition">Contact</a>
                 </nav>
                 <div class="flex items-center space-x-4">
-                    <a href="milesonerd.github.io/" class="px-4 py-2 bg-blue-600 text-white font-medium rounded-lg hover:bg-blue-700 transition shadow-md pulse">Other Website version</a>
+                    <a href="https://milesonerd.github.io/" class="px-4 py-2 bg-blue-600 text-white font-medium rounded-lg hover:bg-blue-700 transition shadow-md pulse">Another site by MilesONerd</a>
                     <button class="md:hidden text-gray-300 focus:outline-none">
                         <i class="fas fa-bars text-2xl"></i>
                     </button>
