Create contact page

--- a/contact.html
+++ b/contact.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | Enzo Fuke | If it hasn't worked out yet, it's because it's not over yet</title>
+    <title>Contact | Enzo Fuke | If it hasn't worked out yet, it's because it's not over yet</title>
     <meta name="description" content="If it hasn't worked out yet, it's because it's not over yet">
     <meta name="author" content="Enzo Fuke">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
-    <meta property="og:url" content="https://milesonerd.netlify.app" />
+    <meta property="og:url" content="https://milesonerd.netlify.app/contact" />
 	<meta property="og:type" content="website" />
 	<meta property="og:site_name" content="Enzo Fuke" />
 	<meta property="og:title" content="Enzo Fuke | If it hasn't worked out yet, it's because it's not over yet" />
@@ -20,7 +20,7 @@
 
 	<meta name="twitter:card" content="summary_large_image" />
 	<meta name="twitter:domain" content="milesonerd.netlify.app" />
-	<meta name="twitter:url" content="https://milesonerd.netlify.app" />
+	<meta name="twitter:url" content="https://milesonerd.netlify.app/contact" />
 	<meta name="twitter:title" content="Enzo Fuke | If it hasn't worked out yet, it's because it's not over yet" />
 	<meta name="twitter:description" content="If it hasn't worked out yet, it's because it's not over yet" />
 	<meta name="twitter:image" content="https://milesonerd.github.io/assets/image/Logo/Phoenix.jpg" />  <meta name="twitter:image:width" content="1200" />
@@ -63,42 +63,35 @@
         </div>
     </header>
 
-    <!-- Hero Section -->
-    <section class="hero-gradient pt-32 pb-20 md:pb-32 px-6">
-        <div class="container mx-auto flex flex-col md:flex-row items-center">
-            <div class="md:w-1/2 mb-12 md:mb-0">
-                <span class="inline-block px-3 py-1 text-sm font-semibold text-blue-100 bg-blue-900 bg-opacity-50 rounded-full mb-4">Enzo Fuke</span>
-                <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold text-white leading-tight mb-6 glow">If it hasn't worked out yet, it's because it's not over yet</h1>
-                <p class="text-xl text-blue-100 opacity-90 mb-8">I am a Data and Machine Learning Professional and Full Stack developer, who programs in Python, SQL, Go, C#, R, Assembly, Rust, Java, F#, Solidity, Ruby, Kotlin, TypeScript, C++, C, JavaScript, LUA and VBA (Visual Basic for Applications). And the NoSQL database. In addition to using the following markup languages ​​Markdown, HTML, XML and YAML. I use the styling language CSS. In addition to using shell languages Shell Script, GNU Bash and PowerShell. And the Json data format. I am a big enthusiast of artificial intelligence (AI) and cibersecurity, where I always follow information. Always learn new things. In favor of decentralizing the internet (Web3).</p>
-                <div class="flex flex-col sm:flex-row space-y-4 sm:space-y-0 sm:space-x-4">
-                    <a href="https://github.com/MilesONerd?tab=repositories" class="px-8 py-4 bg-white text-blue-900 font-bold rounded-lg hover:bg-gray-100 transition shadow-lg text-center">Public Repositories </a>
-                    <a href="https://orcid.org/0009-0000-1734-5150" class="px-8 py-4 border-2 border-white text-white font-bold rounded-lg hover:bg-white hover:bg-opacity-10 transition text-center">ORCID</a>
-                </div>
-                <div class="mt-8 flex items-center">
-                    <div class="flex -space-x-2">
-                        <img src=" https://milesonerd.github.io/assets/image/Logo/Phoenix.jpg" alt="Enzo Fuke" loading="lazy" class="w-10 h-10 rounded-full border-2 border-blue-300">
-                    </div>
-                    <div class="ml-4 text-blue-100">
-                        <p class="font-medium">If it hasn't worked out yet, it's because it's not over yet</p>
-                        <div class="flex items-center">
-                            <i class="fas fa-certificate text-yellow-300"></i>
-                            <span class="ml-2">Data and Machine Learning Professional</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="md:w-1/2 flex justify-center">
-                <div class="terminal w-full max-w-md h-64 p-6 shadow-2xl">
-                    <div class="terminal-dot red"></div>
-                    <div class="terminal-dot yellow"></div>
-                    <div class="terminal-dot green"></div>
-                    <div class="mt-10">
-                        <div class="typewriter text-lg mb-4">> Hello World...</div>
-                        <div class="typewriter text-lg mb-4 delay-1000">> Downloading resources...</div>
-                        <div class="typewriter text-lg mb-4 delay-2000">> Running.</div>
-                        <div class="text-xl font-bold text-green-400 mt-6">Welcome to my new website.</div>
-                    </div>
-                </div>
+    <!-- CTA Section -->
+    <section class="py-20 bg-gradient-to-r from-blue-900 to-gray-900 px-6">
+        <div class="container mx-auto text-center">
+            <h2 class="text-3xl md:text-4xl font-bold text-white mb-6">Contact</h2>
+            <p class="text-xl text-blue-300 mb-8 max-w-3xl mx-auto">Feel free to contact me whenever you need, I'll be waiting!</p>
+            <p class="text-xl text-blue-300 mb-8 max-w-3xl mx-auto">For inquiries or collaborations, feel free to connect via the form bellow or links in the footer.</p>
+            <p class="text-xl text-blue-300 mb-8 max-w-3xl mx-auto">Please note: When you submit a message using the form below, I will reply using a temporary Guerrilla Mail address to protect my real email. After my response, the email will be automatically deleted within 1 hour, and only you will have the message.</p>
+            <p class="text-xl text-blue-300 mb-8 max-w-3xl mx-auto">I do not recommend using a temporary email in the email field, as I cannot guarantee that I will respond within the time frame provided by the temporary email.</p>
+            <p class="text-xl text-blue-300 mb-8 max-w-3xl mx-auto">I respect your privacy. I will never share your email.</p>
+            <div class="max-w-2xl mx-auto">
+                <form action="https://formspree.io/f/xpwdleyr" method="POST" class="flex flex-col sm:flex-row gap-4">
+                    <input 
+                        type="email" 
+                        name="email" 
+                        placeholder="Your best e-mail" 
+                        class="flex-grow px-6 py-4 rounded-lg bg-gray-800 text-white border border-gray-700 focus:border-blue-500 focus:outline-none" 
+                    >
+                    <textarea 
+                        name="message" 
+                        placeholder="Your message" 
+                        class="flex-grow px-6 py-4 rounded-lg bg-gray-800 text-white border border-gray-700 focus:border-blue-500 focus:outline-none" 
+                    ></textarea>
+                    <button 
+                        type="submit" 
+                        class="px-8 py-4 bg-blue-600 text-white font-bold rounded-lg hover:bg-blue-700 transition shadow-lg"
+                    >
+                        Submit
+                    </button>
+                </form>
             </div>
         </div>
     </section>
