Changing the color of social media logos to white

--- a/contact.html
+++ b/contact.html
@@ -109,23 +109,23 @@
                     </div>
                     <p class="text-gray-400 mb-4">If it hasn't worked out yet, it's because it's not over yet</p>
                     <div class="social-icons-container">
-                        <a href="https://bitbucket.org/milesonerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/bitbucket/0052CC" alt="Bitbucket logo" class="social-icon" loading="lazy"></a>
-                        <a href="https://codeberg.org/MilesONerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/codeberg/2185D0" alt="Codeberg logo" class="social-icon" loading="lazy"></a>
-                        <a href="https://codepen.io/MilesONerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/codepen/0EBEFF" alt="CodePen logo" class="social-icon" loading="lazy"></a>
-                        <a href="https://gitea.com/MilesONerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/gitea/609926" alt="Gitea logo" class="social-icon" loading="lazy"></a>
-                        <a href="https://github.com/MilesONerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/github/181717" alt="GitHub logo" class="social-icon" loading="lazy"></a>
-                        <a href="https://gitlab.com/MilesONerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/gitlab/fc6d27" alt="GitLab logo" class="social-icon" loading="lazy"></a>
-                        <a href="https://g.dev/MilesONerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/google/4285F4" alt="Google logo" class="social-icon" loading="lazy"></a>
-                        <a href="https://gravatar.com/milesonerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/gravatar/2768A8" alt="Gravatar logo" class="social-icon" loading="lazy"></a>
-                        <a href="https://huggingface.co/milesonerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/huggingface/ffcc00" alt="Hugging Face" class="social-icon" loading="lazy" /></a>
-                        <a href="https://instagram.com/milesonerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/instagram/e1306c" alt="Instagram logo" class="social-icon" loading="lazy"></a>
-                        <a href="https://kaggle.com/milesonerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/kaggle/20BEFF" alt="Kaggle logo" class="social-icon" loading="lazy"></a>
-                        <a href="https://openprofile.dev/profile/milesonerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/linuxfoundation/003B49" alt="Linux Foundation logo" class="social-icon" loading="lazy"></a>
-                        <a href="https://fosstodon.org/@MilesONerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/mastodon/6364FF" alt="Mastodon logo" class="social-icon" loading="lazy"></a>
-                        <a href="https://www.postman.com/milesonerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/postman/EF5B25" alt="Postman logo" class="social-icon" loading="lazy"></a>
-                        <a href="https://stackoverflow.com/users/26412577" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/stackoverflow/f47f24" alt="Stack Overflow logo" class="social-icon" loading="lazy"></a>
-                        <a href="https://threads.net/milesonerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/threads/FFFFFF" alt="Threads logo" class="social-icon" loading="lazy"></a>
-                        <a href="https://wakatime.com/@MilesONerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/wakatime/f47f1e" alt="WakaTime logo" class="social-icon" loading="lazy"></a>
+                        <a href="https://bitbucket.org/milesonerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/bitbucket/ffffff" alt="Bitbucket logo" class="social-icon" loading="lazy"></a>
+                        <a href="https://codeberg.org/MilesONerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/codeberg/ffffff" alt="Codeberg logo" class="social-icon" loading="lazy"></a>
+                        <a href="https://codepen.io/MilesONerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/codepen/ffffff" alt="CodePen logo" class="social-icon" loading="lazy"></a>
+                        <a href="https://gitea.com/MilesONerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/gitea/ffffff" alt="Gitea logo" class="social-icon" loading="lazy"></a>
+                        <a href="https://github.com/MilesONerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/github/ffffff" alt="GitHub logo" class="social-icon" loading="lazy"></a>
+                        <a href="https://gitlab.com/MilesONerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/gitlab/ffffff" alt="GitLab logo" class="social-icon" loading="lazy"></a>
+                        <a href="https://g.dev/MilesONerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/google/ffffff" alt="Google logo" class="social-icon" loading="lazy"></a>
+                        <a href="https://gravatar.com/milesonerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/gravatar/ffffff" alt="Gravatar logo" class="social-icon" loading="lazy"></a>
+                        <a href="https://huggingface.co/milesonerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/huggingface/ffffff" alt="Hugging Face" class="social-icon" loading="lazy" /></a>
+                        <a href="https://instagram.com/milesonerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/instagram/ffffff" alt="Instagram logo" class="social-icon" loading="lazy"></a>
+                        <a href="https://kaggle.com/milesonerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/kaggle/ffffff" alt="Kaggle logo" class="social-icon" loading="lazy"></a>
+                        <a href="https://openprofile.dev/profile/milesonerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/linuxfoundation/ffffff" alt="Linux Foundation logo" class="social-icon" loading="lazy"></a>
+                        <a href="https://fosstodon.org/@MilesONerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/mastodon/ffffff" alt="Mastodon logo" class="social-icon" loading="lazy"></a>
+                        <a href="https://www.postman.com/milesonerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/postman/ffffff" alt="Postman logo" class="social-icon" loading="lazy"></a>
+                        <a href="https://stackoverflow.com/users/26412577" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/stackoverflow/ffffff" alt="Stack Overflow logo" class="social-icon" loading="lazy"></a>
+                        <a href="https://threads.net/milesonerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/threads/ffffff" alt="Threads logo" class="social-icon" loading="lazy"></a>
+                        <a href="https://wakatime.com/@MilesONerd" class="text-white hover:text-blue-400"><img src="https://cdn.simpleicons.org/wakatime/ffffff" alt="WakaTime logo" class="social-icon" loading="lazy"></a>
                     </div>
                 </div>
                 <div>
