Moving accessibility statement and license to milesonerd.github.io

--- a/contact.html
+++ b/contact.html
@@ -133,7 +133,7 @@
                     <ul class="space-y-2">
                         <li><a href="https://github.com/MilesONerd/website/" class="text-gray-400 hover:text-blue-400 transition">Repository</a></li>
                         <li><a href="https://github.com/MilesONerd/website/blob/main/LICENSE" class="text-gray-400 hover:text-blue-400 transition">Source Code - License</a></li>
-                        <li><a href="/license/cc-by" class="text-gray-400 hover:text-blue-400 transition">Content - License</a></li>
+                        <li><a href="https://milesonerd.github.io/license/cc-by" class="text-gray-400 hover:text-blue-400 transition">Content - License</a></li>
                         <li><a href="https://github.com/" class="text-gray-400 hover:text-blue-400 transition">Source Code - Hosting</a></li>
                         <li><a href="https://netlify.com/" class="text-gray-400 hover:text-blue-400 transition">Website - Hosting</a></li>
                     </ul>
@@ -157,10 +157,10 @@
                 <p class="text-gray-500 text-sm mb-4 md:mb-0">Copyright © 2025 Enzo Fuke. All Rights Reserved.</p>
                 <p class="text-gray-500 text-sm mb-4 md:mb-0">This website is not affiliated with any of the companies mentioned. All product names, logos and brands are the property of their respective owners.</p>
                 <div class="flex space-x-6">
-                    <a href="/terms/service" class="text-gray-500 hover:text-gray-400 text-sm">Terms of Service</a>
-                    <a href="/policies/privacy" class="text-gray-500 hover:text-gray-400 text-sm">Privacy</a>
-                    <a href="/policies/cookies" class="text-gray-500 hover:text-gray-400 text-sm">Cookies</a>
-                    <a href="/accessibility" class="text-gray-500 hover:text-gray-400 text-sm">Accessibility</a>
+                    <a href="https://milesonerd.github.io/terms/service" class="text-gray-500 hover:text-gray-400 text-sm">Terms of Service</a>
+                    <a href="https://milesonerd.github.io/policies/privacy" class="text-gray-500 hover:text-gray-400 text-sm">Privacy</a>
+                    <a href="https://milesonerd.github.io/policies/cookies" class="text-gray-500 hover:text-gray-400 text-sm">Cookies</a>
+                    <a href="https://milesonerd.github.io/accessibility" class="text-gray-500 hover:text-gray-400 text-sm">Accessibility</a>
                 </div>
             </div>
         </div>
